fix: NewFormPage -> CustomSlider, textinput alignment

--- a/diversitytracker.web/src/pages/NewFormPage.css
+++ b/diversitytracker.web/src/pages/NewFormPage.css
@@ -28,7 +28,7 @@
 }
 
 .newformpage__form__item{
-    margin-top: 0rem;
+    margin-top: 2rem;
     width: 100%;
 }
 
